<resources>
    <string name="app_name">DUHT</string>
    <string name="did_you_hear_that">DId you hear that?</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>

    <string name="Play">play</string>
    <string name="button">Button</string>
    <string name="next">Next Question</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">New user? Sign Up here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="time">45</string>
    <string name="Question_number">Question : 1/x</string>
    <string name="next_question">Next Question</string>
    <string name="question_1_x">Question : 1/x</string>
    <string name="_00_45">00:45</string>
    <string name="discription">TRAIN TO HEAR BETTER!</string>
    <string name="duht">DUHT</string>
    <string name="sign_up">Sign Up to start your training</string>

</resources>
