<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questiontab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ques"
    tools:context=".QuestionActivity">


    <Button
        android:id="@+id/playbutton"
        android:layout_width="135dp"
        android:layout_height="113dp"

        android:layout_marginTop="200dp"
        android:background="@drawable/sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/slowplaybutton"
        android:layout_width="101dp"
        android:layout_height="97dp"
        android:background="@drawable/slowmotion"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/playbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintVertical_bias="0.63" />

    <ListView
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playbutton"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/numberofquestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1_x"
        app:layout_constraintBottom_toTopOf="@+id/playbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toEndOf="@+id/slowplaybutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="114dp"
        android:layout_height="11dp"
        android:text="@string/_00_45"
        app:layout_constraintBottom_toTopOf="@+id/numberofquestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/slowplaybutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <TextView
        android:id="@+id/result"
        android:layout_width="166dp"
        android:layout_height="36dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>